--- a/src/lista/view/Login.form
+++ b/src/lista/view/Login.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="lista02.view.Login">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="lista.view.Login">
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
@@ -49,7 +49,7 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <icon value="imagens/if-logo2.png"/>
+              <icon value="if-logo2.png"/>
               <text value=""/>
             </properties>
           </component>
