--- a/src/lista/view/Principal.form
+++ b/src/lista/view/Principal.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="lista02.view.Principal">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="lista.view.Principal">
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -62,7 +62,7 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <icon value="imagens/if-logo2.png"/>
+                  <icon value="if-logo2.png"/>
                   <text value=""/>
                   <verticalAlignment value="0"/>
                   <verticalTextPosition value="0"/>
