--- a/src/lista_bd/view/Projetos.form
+++ b/src/lista_bd/view/Projetos.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="lista.view.Projetos">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="lista_bd.view.Projetos">
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
@@ -24,7 +24,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="2cee6" class="javax.swing.JLabel" binding="evento">
+              <component id="2cee6" class="javax.swing.JLabel" binding="label_evento">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -32,7 +32,7 @@
                   <text value="Evento"/>
                 </properties>
               </component>
-              <component id="7718f" class="javax.swing.JLabel" binding="coordenador">
+              <component id="7718f" class="javax.swing.JLabel" binding="label_coordenador">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -40,7 +40,7 @@
                   <text value="Coodernador"/>
                 </properties>
               </component>
-              <component id="b9e6a" class="javax.swing.JLabel" binding="campus">
+              <component id="b9e6a" class="javax.swing.JLabel" binding="label_campus">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -48,7 +48,7 @@
                   <text value="Campus"/>
                 </properties>
               </component>
-              <component id="bc1ff" class="javax.swing.JLabel" binding="titulo">
+              <component id="bc1ff" class="javax.swing.JLabel" binding="label_titulo">
                 <constraints>
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -56,7 +56,7 @@
                   <text value="Título"/>
                 </properties>
               </component>
-              <component id="e2d07" class="javax.swing.JLabel" binding="estudante">
+              <component id="e2d07" class="javax.swing.JLabel" binding="label_estudante">
                 <constraints>
                   <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -64,7 +64,7 @@
                   <text value="Estudante"/>
                 </properties>
               </component>
-              <component id="8c6f9" class="javax.swing.JLabel" binding="matricula">
+              <component id="8c6f9" class="javax.swing.JLabel" binding="label_matricula">
                 <constraints>
                   <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -72,7 +72,7 @@
                   <text value="Matricula"/>
                 </properties>
               </component>
-              <component id="1ff5a" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+              <component id="1ff5a" class="javax.swing.JTextField" binding="coordenador">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -80,7 +80,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="a7abf" class="javax.swing.JTextField" binding="textField4" default-binding="true">
+              <component id="a7abf" class="javax.swing.JTextField" binding="campus">
                 <constraints>
                   <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -88,7 +88,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="984fe" class="javax.swing.JTextField" binding="textField5" default-binding="true">
+              <component id="984fe" class="javax.swing.JTextField" binding="titulo">
                 <constraints>
                   <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -96,7 +96,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="fb5b5" class="javax.swing.JTextField" binding="textField6" default-binding="true">
+              <component id="fb5b5" class="javax.swing.JTextField" binding="estudante">
                 <constraints>
                   <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -104,7 +104,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="820f7" class="javax.swing.JTextField" binding="textField7" default-binding="true">
+              <component id="820f7" class="javax.swing.JTextField" binding="matricula">
                 <constraints>
                   <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -120,7 +120,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="e33aa" class="javax.swing.JButton" binding="excluirButton" default-binding="true">
+                  <component id="e33aa" class="javax.swing.JButton" binding="excluirBtn">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -128,7 +128,7 @@
                       <text value="Excluir"/>
                     </properties>
                   </component>
-                  <component id="a9cbe" class="javax.swing.JButton" binding="limparButton" default-binding="true">
+                  <component id="a9cbe" class="javax.swing.JButton" binding="limparBtn">
                     <constraints>
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -136,7 +136,7 @@
                       <text value="Limpar"/>
                     </properties>
                   </component>
-                  <component id="9b3b" class="javax.swing.JButton" binding="novoButton" default-binding="true">
+                  <component id="9b3b" class="javax.swing.JButton" binding="novoBtn">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -144,7 +144,7 @@
                       <text value="Novo"/>
                     </properties>
                   </component>
-                  <component id="831e7" class="javax.swing.JButton" binding="editarButton" default-binding="true">
+                  <component id="831e7" class="javax.swing.JButton" binding="editarBtn">
                     <constraints>
                       <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -154,7 +154,7 @@
                   </component>
                 </children>
               </grid>
-              <component id="57f98" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+              <component id="57f98" class="javax.swing.JTextField" binding="evento">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -172,7 +172,7 @@
             <properties/>
             <border type="none"/>
             <children>
-              <component id="9076f" class="javax.swing.JLabel" binding="cpf">
+              <component id="9076f" class="javax.swing.JLabel" binding="label_cpf">
                 <constraints>
                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -180,7 +180,7 @@
                   <text value="CPF"/>
                 </properties>
               </component>
-              <component id="96302" class="javax.swing.JTextField" binding="textField2" default-binding="true">
+              <component id="96302" class="javax.swing.JTextField" binding="cpf">
                 <constraints>
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -188,7 +188,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="53f3" class="javax.swing.JLabel" binding="banco">
+              <component id="53f3" class="javax.swing.JLabel" binding="label_banco">
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -196,7 +196,7 @@
                   <text value="Nº do banco"/>
                 </properties>
               </component>
-              <component id="7a180" class="javax.swing.JLabel" binding="contacorrente">
+              <component id="7a180" class="javax.swing.JLabel" binding="label_contacorrente">
                 <constraints>
                   <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -204,7 +204,7 @@
                   <text value="Conta corrente"/>
                 </properties>
               </component>
-              <component id="36b4a" class="javax.swing.JLabel" binding="agencia">
+              <component id="36b4a" class="javax.swing.JLabel" binding="label_agencia">
                 <constraints>
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -212,7 +212,7 @@
                   <text value="Agência"/>
                 </properties>
               </component>
-              <component id="7476f" class="javax.swing.JLabel" binding="celular">
+              <component id="7476f" class="javax.swing.JLabel" binding="label_celular">
                 <constraints>
                   <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -220,7 +220,7 @@
                   <text value="Celular"/>
                 </properties>
               </component>
-              <component id="1fc81" class="javax.swing.JLabel" binding="email">
+              <component id="1fc81" class="javax.swing.JLabel" binding="label_email">
                 <constraints>
                   <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
@@ -228,7 +228,7 @@
                   <text value="E-mail "/>
                 </properties>
               </component>
-              <component id="f9a95" class="javax.swing.JTextField" binding="textField8" default-binding="true">
+              <component id="f9a95" class="javax.swing.JTextField" binding="banco">
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -236,7 +236,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="db8f3" class="javax.swing.JTextField" binding="textField9" default-binding="true">
+              <component id="db8f3" class="javax.swing.JTextField" binding="contacorrente">
                 <constraints>
                   <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -244,7 +244,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="d317f" class="javax.swing.JTextField" binding="textField10" default-binding="true">
+              <component id="d317f" class="javax.swing.JTextField" binding="agencia">
                 <constraints>
                   <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -252,7 +252,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="f5a35" class="javax.swing.JTextField" binding="textField11" default-binding="true">
+              <component id="f5a35" class="javax.swing.JTextField" binding="celular">
                 <constraints>
                   <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -260,7 +260,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <component id="34d3b" class="javax.swing.JTextField" binding="textField12" default-binding="true">
+              <component id="34d3b" class="javax.swing.JTextField" binding="email">
                 <constraints>
                   <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="150" height="-1"/>
@@ -284,7 +284,7 @@
                     </constraints>
                     <properties/>
                   </component>
-                  <component id="c6317" class="javax.swing.JButton" binding="pesquisaButton" default-binding="true">
+                  <component id="c6317" class="javax.swing.JButton" binding="pesquisaBtn">
                     <constraints>
                       <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                     </constraints>
