--- a/src/lista_bd/view/Projetos.form
+++ b/src/lista_bd/view/Projetos.form
@@ -112,7 +112,7 @@
                 </constraints>
                 <properties/>
               </component>
-              <grid id="12651" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="12651" layout-manager="GridLayoutManager" row-count="2" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="20" left="20" bottom="20" right="20"/>
                 <constraints>
                   <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
@@ -150,6 +150,22 @@
                     </constraints>
                     <properties>
                       <text value="Editar"/>
+                    </properties>
+                  </component>
+                  <component id="ef11e" class="javax.swing.JButton" binding="listarBtn">
+                    <constraints>
+                      <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Listar"/>
+                    </properties>
+                  </component>
+                  <component id="374cd" class="javax.swing.JButton" binding="imprimirBtn">
+                    <constraints>
+                      <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text value="Imprimir"/>
                     </properties>
                   </component>
                 </children>
@@ -276,7 +292,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="758" class="javax.swing.JTextField" binding="textField13" default-binding="true">
+                  <component id="758" class="javax.swing.JTextField" binding="txtPesquisa">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="3" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
