--- a/src/lista_bd/view/Principal.form
+++ b/src/lista_bd/view/Principal.form
@@ -16,7 +16,7 @@
         <properties/>
         <border type="empty"/>
         <children>
-          <grid id="e4d70" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="e4d70" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -38,10 +38,10 @@
                     </properties>
                     <border type="none"/>
                     <children>
-                      <grid id="b0143" class="javax.swing.JMenu" binding="produtos" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
+                      <grid id="b0143" class="javax.swing.JMenu" binding="projetos" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="1">
                         <constraints/>
                         <properties>
-                          <text value="Produtos"/>
+                          <text value="Projetos"/>
                         </properties>
                         <border type="none"/>
                         <children>
@@ -57,17 +57,6 @@
                   </grid>
                 </children>
               </grid>
-              <component id="d32a1" class="javax.swing.JLabel">
-                <constraints>
-                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <icon value="if-logo2.png"/>
-                  <text value=""/>
-                  <verticalAlignment value="0"/>
-                  <verticalTextPosition value="0"/>
-                </properties>
-              </component>
             </children>
           </grid>
           <grid id="cdd4" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
